[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "TabPFGen"
version = "0.1.0"
description = "Synthetic tabular data generation using energy-based modeling and TabPFN"
readme = "README.md"
authors = [
    { name = "Sebastian Haan"}
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.21.0",
    "torch>=1.9.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "scipy>=1.7.0",
    "tabpfn>=0.1.0",
]


docs = [
    "sphinx>=4.5.0",
    "sphinx-rtd-theme>=1.0.0",
]


[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"